Fixed the alignment at the bottom of the page

--- a/rabbithole/src/app/sub-systems/home/auth/auth.component.scss
+++ b/rabbithole/src/app/sub-systems/home/auth/auth.component.scss
@@ -30,7 +30,8 @@ $retroGreen: #A7FF2D;
     text-align: left;
 }
 
-div
-{
-    margin: auto;
-}
+// div
+// {
+//     margin-left: auto !important;
+//     margin-right: auto !important;
+// }
