--- a/rabbithole/src/styles.scss
+++ b/rabbithole/src/styles.scss
@@ -200,3 +200,6 @@ h3.amplify-heading
     font-family: 'Open Sans', sans-serif; 
 }
 
+// this might cause issues later
+
+div {margin: auto;}
